# cherubimis-website

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
cherubimis_website/: Dockerfile  manage.py  requirements.txt
cherubimis_website/cherubimis_website/: asgi.py  settings.py  urls.py  wsgi.py
cherubimis_website/core/: forms.py  models.py  urls.py  views.py
cherubimis_website/core/management/commands/: wait_for_db.py
cherubimis_website/core/migrations/: 0001_initial.py
cherubimis_website/core/static/css/: styles.css
cherubimis_website/core/static/images/: CBIS New (1).ai  CBIS New EPS.eps
cherubimis_website/core/static/js/: script.js
cherubimis_website/core/templates/: about.html  base.html  careers.html  contact.html  contact_success.html  index.html  services copy.html  services.html  solutions.html  support.html
cherubimis_website/scripts/: run.sh
cherubimis_website/staticfiles/: styles.css
cherubimis_website/staticfiles/css/: styles.css
cherubimis_website/staticfiles/js/: script.js
db-primary/: init-primary.sh  my.cnf
nginx/: Dockerfile  default.conf
