[tool.poetry]
name = "cherubimis-website"
version = "0.1.0"
description = "Cherubimis Website"
authors = ["KubalalikaL <lkubalalika@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django-crispy-forms = "^2.3"
django = "^5.1.6"
gunicorn = "^23.0.0"
pymysql = "^1.1.1"
crispy-bootstrap5 = "^2024.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
